--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             margin: 0;
             padding: 0;
             background-color: black;
-			background-image: url('stars.jpg');
+			background-image: url('https://raw.githubusercontent.com/Ve-nator/Smoky/main/png/stars.jpg');
         }
 
         #fogContainer {
@@ -49,10 +49,10 @@
     <script>
         // Пути к текстурам тумана
         var fogTextures = [
-            "22222.png", 
-            "44444.png",
-            "asdsad.png",
-            "5546456.png"
+            "https://raw.githubusercontent.com/Ve-nator/Smoky/main/png/22222.png", 
+            "https://raw.githubusercontent.com/Ve-nator/Smoky/main/png/44444.png",
+            "https://raw.githubusercontent.com/Ve-nator/Smoky/main/png/asdsad.png",
+            "https://raw.githubusercontent.com/Ve-nator/Smoky/main/png/5546456.png"
         ];
 
         // Создание и добавление текстур тумана в контейнер
