--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <title>Айвон</title>
+  <link rel="stylesheet" href="css/styles.css">
+  
 </head>
 <body>
     <div id="fogContainer"></div>
